# small_tools

./: README.md  cof.json
accthero/: Cargo.toml
accthero/src/: base_connect.rs  base_connect.rs.bk  data_collect.rs  data_collect.rs.bk  main.rs
bashtool/: fashpush.sh
bashtools/: fastemsync  fastenv  fastgrep  fastpush  fastshot  fnswap
binarygen/: README.md  go.mod  main.go  test.txt
binarygen/cmd/: .#encode.go  decode.go  ecodfile.go  encode.go  root.go
binarygen/configs/: meta.json
emsync/: README.md  go.mod  go.sum  main.go
emsync/cmd/: .#pull.go  pull.go  pull_test.go  push.go  root.go
fast_cal_offsets/: Cargo.toml  sheets.xlsx
fast_cal_offsets/src/: main.rs
fastdir/: .fastdir.conf  fastdir.sh
fastfile/: Cargo.toml
fastfile/src/: .#main.rs  config_load.rs  main.rs  user_interface.rs
fastftp/: Cargo.toml
fastftp/conf/: fastftp.toml
fastftp/src/: configs.rs  main.rs
ifmcode/: Cargo.toml
ifmcode/config/: config.toml
ifmcode/src/: configs.rs  main.rs
myarch/: .#README.md  Makefile  go.mod  go.sum
myarch/myarch/: myarch.go
nsqdump/: go.mod  main.go
nsqdump/cmd/: dump.go  dump_test.go  root.go  topic_dump.go  topic_dump_test.go
scheduler/: .#Cargo.toml  Cargo.toml
scheduler/bookkeep/: 2020-01-01.txt  2020-10-14.txt  2020-10-15.txt  2020-10-16.txt  test.txt
scheduler/debug/: scheduler.d
shadowmod/: go.mod  main.go  prefs.js  shadowdns.json  shadowproxy.json
test_file_gen/: file_gen.py
thunderfile/: go.mod  go.sum  main.go  token.txt
transblog/: go.mod  go.sum  main.go
usensq/: go.mod  go.sum  use_nsq.go
(+76 files in other folders)
