[package]
name = "accthero"
version = "0.1.0"
authors = ["hjiangsse <redmagic039@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = {version = "0.19.0", features = ["with-chrono-0_4"] }
structopt = "0.3.20"
chrono = "0.4.19"
