[package]
name = "fastfile"
version = "0.1.0"
authors = ["hjiangsse <hjiang@sse.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = "1.0"
serde_derive = "1.0.117"
ssh2 = "0.3"
structopt = "0.3.20"
chrono = "0.4"
dirs = "3.0.1"
walkdir = "2"
subprocess = "0.2.6"